kubernetes/traefik/redirect_https.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-redirect-scheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.example.site`) && PathPrefix(`/nginx`)
      kind: Rule
      middlewares:
        - name: nginx-redirect-scheme      
      services:
        - name: clear-nginx-service
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s-test.dttt.vn`) && PathPrefix(`/blue{regex:$|/.*}`)
      kind: Rule     
      services:
        - name: blue-nginx-service
          port: 80
      - name: stripprefix
        namespace: default
  tls:
    certResolver: myresolver
